# terminal-chat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-build.yml
src/: main.rs
tests/: integration_output.rs
