[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[profile.release]
# Optimize for smallest binary size for production builds
# Use "z" (size-optimized) opt-level, enable LTO, single codegen unit
# abort on panic, disable debug and incremental builds
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
incremental = false
overflow-checks = false
